# django-jet

./: .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  README.rst  gulpfile.js  package.json  pyproject.toml  pytest.ini
.github/workflows/: test.yml
example/: Makefile
example/app/: admin.py  apps.py  forms.py  models.py  views.py
example/app/migrations/: 0001_initial.py  0002_populate_samples.py
example/core/: admin.py  dashboard.py  models.py  sidebar.py
example/project/: settings.py  urls.py
examples/project/: Makefile
examples/project/app/: admin.py  models.py
examples/project/app/migrations/: 0001_initial.py  0002_populate_samples.py
examples/project/project/: settings.py
jet/: __init__.py  apps.py  filters.py  forms.py  ordered_set.py  settings.py  sidebar.py  urls.py  utils.py  views.py
jet/dashboard/: apps.py  checks.py  dashboard.py  forms.py  models.py  settings.py  urls.py  utils.py  views.py
jet/dashboard/dashboard_modules/: google_analytics.py  google_analytics_views.py  yandex_metrika.py  yandex_metrika_views.py
jet/dashboard/migrations/: 0001_initial.py
jet/dashboard/modules/: __init__.py  app_list.py  base.py  feed.py  link_list.py  model_list.py  recent_actions.py
jet/dashboard/modules/google_analytics/: __init__.py  module.py  urls.py  views.py
jet/dashboard/modules/yandex_metrika/: __init__.py  module.py  urls.py  views.py
jet/dashboard/templates/admin/: app_index.html  index.html
jet/dashboard/templates/jet.dashboard/: dashboard_tools.html  module.html
jet/dashboard/templates/jet.dashboard/modules/: app_list.html  feed.html  google_analytics_period_visitors.html  google_analytics_visitors_totals.html  link_list.html  model_list.html  recent_actions.html  yandex_metrika_period_visitors.html
jet/dashboard/templatetags/: jet_dashboard_tags.py
jet/management/commands/: jet_custom_apps_example.py  jet_side_menu_items_example.py  jet_sidebar_items.py
jet/migrations/: 0001_initial.py  0002_delete_userdashboardmodule.py
jet/sidebar/: __init__.py  config.py  view.py
jet/static/jet/css/: _base.scss  _changeform.scss  _changelist.scss  _content.scss  _dashboard.scss  _forms.scss  _header.scss  _relatedpopup.scss  _sidebar.scss  _variables.scss  vendor.css
jet/static/jet/css/jquery-ui/: _jquery-ui.theme.scss
jet/static/jet/css/select2/: _single.scss
jet/static/jet/css/themes/default/: base.css  base.css.map  jquery-ui.theme.css.map  select2.theme.css.map
jet/static/jet/css/themes/green/: base.css  base.css.map  jquery-ui.theme.css.map  select2.theme.css.map
jet/static/jet/css/themes/light-blue/: base.css  base.css.map  jquery-ui.theme.css.map  select2.theme.css.map
jet/static/jet/css/themes/light-gray/: base.css  base.css.map  jquery-ui.theme.css.map  select2.theme.css.map
jet/static/jet/css/themes/light-green/: base.css  base.css.map  jquery-ui.theme.css.map  select2.theme.css.map
jet/static/jet/css/themes/light-violet/: base.css  base.css.map  jquery-ui.theme.css.map  select2.theme.css.map
jet/static/jet/js/src/: main.js
jet/static/jet/js/src/features/: changeform-tabs.js  changeform.js  changelist.js  checkboxes.js  compact-inline.js  dashboard.js  date-time-widgets.js  filters.js  inlines.js  related-popups.js  scroll-to-bottom-detector.js  selects.js  siblings.js  themes.js  tooltips.js  touchmove-non-scrollable.js
jet/static/jet/js/src/features/sidebar/: application-pinning.js  bookmarks.js  main.js  popup.js
jet/static/jet/js/src/layout-updaters/: actions.js  branding.js  breadcrumbs.js  changeform-tabs.js  delete-confirmation.js  icons.js  object-tools.js  paginator.js  related-widget-wrapper.js  stacked-inline.js  tabular-inline.js  toolbar.js  user-tools.js
jet/static/jet/js/src/utils/: jquery-icontains.js  jquery-slidefade.js  translate.js  window-storage.js
jet/templates/admin/: base.html  popup_response.html
jet/templates/admin/edit_inline/: compact.html
jet/templates/jet/sidebar/: popup_app.html  section_apps.html  section_bookmarks.html  section_nav.html  sidebar.html
jet/templates/rangefilter/: date_filter.html
jet/templatetags/: jet_tags.py
tests/: test_filters.py  test_tags.py  test_utils.py  test_views.py
tests/dashboard/: test_dashboard.py
tests/test_project/: admin.py  dashboard.py  models.py  settings.py  urls.py
