[tool.poetry]
name = "jet"
version = "1.0.8"
description = "Modern template for Django admin interface with improved functionality"
authors = ["Denis Kildishev <support@jet.geex-arts.com>", "Bachynin Ivan <bachynin.i@gmail.com>"]
license = "AGPL-3.0"
readme = "README.rst"
homepage = "https://github.com/vanyakosmos/django-jet"
keywords = ["django", "admin", "ui"]
classifiers=[
      "Development Status :: 3 - Alpha",
      "Framework :: Django",
      "License :: Free for non-commercial use",
      "License :: OSI Approved :: GNU Affero General Public License v3",
      "Intended Audience :: Developers",
      "Intended Audience :: System Administrators",
      "Operating System :: OS Independent",
      "Programming Language :: Python",
      "Programming Language :: Python :: 3.7",
      "Programming Language :: Python :: 3.8",
      "Environment :: Web Environment",
      "Topic :: Software Development",
      "Topic :: Software Development :: User Interfaces",
  ]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pytest-sugar = "^0.9.2"
pytest-django = "^3.8.0"
pytest-env = "^0.6.2"
pytest-cov = "^2.8.1"
django-debug-toolbar = "^2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
