[tool.poetry]
name = "djet2"
version = "1.0.9-alpha.9"
description = "Modern template for Django admin interface with improved functionality"
authors = ["Denis Kildishev <support@jet.geex-arts.com>"]
maintainers = ["Bachynin Ivan <bachynin.i@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
homepage = "https://github.com/vanyakosmos/djet2"
keywords = ["django", "admin", "ui"]
classifiers=[
  "Development Status :: 3 - Alpha",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Environment :: Web Environment",
  "Topic :: Software Development",
  "Topic :: Software Development :: User Interfaces",
]
packages = [
    { include = "jet" },
]
exclude = [
  "jet/**/*.css.map",
  "jet/**/*.scss",
  "jet/static/jet/js/src/*",
]
include = [
  "jet/locale/*/LC_MESSAGES/*.mo",
  "jet/dashboard/locale/*/LC_MESSAGES/*.mo",
  "jet/static/jet/css/vendor.css",
  "jet/static/jet/css/themes/*/*.css",
  "jet/static/jet/js/build/bundle.min.js",
  "jet/static/jet/js/i18n/*/*.js",
]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3"
google-api-python-client = {version = "1.4.1", optional = true}
django-autocomplete-light = "^3.5.1"
pydantic = "^1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pytest-sugar = "^0.9.2"
pytest-django = "^3.8.0"
pytest-env = "^0.6.2"
pytest-cov = "^2.8.1"
django-debug-toolbar = "^2.2"
django-debug-toolbar-template-profiler = "^2.0.0"

[tool.poetry.extras]
google_analytics = ["google-api-python-client"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
